# e-commerce-api

./: ecommerce-api.xml  pyproject.toml
app/: main.py
app/api/routers/: products.py
app/core/: config.py
app/db/: database.py  models.py  test_db.py
